[package]
name = "pegasus"
version = "0.2.0"
description = "GFX + Specs framework"
repository = "https://github.com/kvark/pegasus"
keywords = ["gamedev"]
license = "Apache-2.0"
authors = ["Dzmitry Malyshau <kvarkus@gmail.com>"]

[lib]

[dependencies]
env_logger = "0.3"
gfx = "0.12"
glutin = "0.6"
specs = "0.7"

[dev_dependencies]
gfx_window_glutin = "0.12"
