[package]
name = "pegasus"
version = "0.3.0"
description = "GFX + Specs framework"
repository = "https://github.com/kvark/pegasus"
keywords = ["gamedev"]
license = "Apache-2.0"
authors = ["Dzmitry Malyshau <kvarkus@gmail.com>"]

[lib]

[dependencies]
gfx = "0.14"
specs = "0.7"

[dev_dependencies]
env_logger = "0.3"
gfx_window_glutin = "0.14"
glutin = "0.7"
